# Paul-s-TPMS-HX

./: .gitignore  PAPER_VERIFICATION.md  README.md  REFPROP_9  pyproject.toml  requirements-dev.txt  requirements-refprop.txt  requirements.txt
docs/: CALIBRATION.md  GUI_GUIDE.md  IYER_2022_BENCHMARK.md  IYER_2022_VERIFICATION.md  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_ZERO_GRADIENT_ISSUE.md  Q_INSENSITIVITY_ANALYSIS.md  REAL_FLUID_PROPERTIES.md  REFPROP_SETUP.md  RVE_PROPERTY_FIXES.md  SOLVER_STABILITY.md  STL_GENERATION.md
examples/: run_v1.py  run_v1_2d.py  run_v1_real_properties.py
scripts/: apply_rve_fixes.py  calibrate_from_experiments.py  complete_cheung_calibration.py  create_cheung_rve_table.py  diagnose_solver.py  instrument_solver.py  investigate_q_insensitivity.py  launch_gui.sh  run_gui.py  run_gui_macos.sh  run_gui_terminal.applescript  setup_refprop9.py  test_fig1a_calibration.py  test_fig1c_1d_1e_calibration.py  test_gradient.py  test_iyer_benchmark.py  test_property_limited_conditions.py  validate_paper_results.py  verify_rve_properties.py
src/hxopt/: __init__.py  calibrate_rve.py  config.py  constraints.py  export_geometry.py  flow_paths.py  gui.py  macro_model.py  materials.py  metal_properties.py  objective.py  optimize_mma.py  rve_db.py  tpms.py  tpms_library.py  tpms_stl_generator.py  validate.py
src/hxopt/refprop_wrapper/: __init__.py  refprop_core.py  refprop_integration.py
tests/: test_calibration.py  test_energy_balance.py  test_iyer_2022_benchmark.py  test_optimizer_smoke.py  test_rve_interp.py
ui/: __init__.py  streamlit_app.py
