[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hxopt"
version = "0.1.0"
description = "TPMS heat exchanger optimizer for He/LH2 systems"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "CoolProp>=6.4.0",  # Fallback for REFPROP
    "matplotlib>=3.5.0",  # For GUI visualizations
    "streamlit>=1.28.0",  # Streamlit UI
    "plotly>=5.14.0",  # 3D visualization
    "scikit-image>=0.19.0",  # Marching cubes
    "numpy-stl>=3.0.0",  # STL export
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]
refprop = [
    "REFPROP-dll>=10.0",  # REFPROP wrapper (requires REFPROP installation)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

